[Jour 3] Ajout base de données H2 pour les tests